Improved nav bar and added sticky footer

--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,9 +1,8 @@
 <nav style="colour: purple;">
 	{% for item in site.data.navigation %}
 		<a href="{{ item.link }}" 
-			{% if page.url == item.link %} class="nav_currentlySelected" 
-			{% else %} class="nav_notSelected" {% endif %}>
-				{{ item.name }}
+			{% if page.url == item.link %} class="nav_currentlySelected" {% endif %}>
+			~\{{ item.name | downcase }}
 		</a>
 	{% endfor %}
 </nav>
