--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,7 +7,15 @@
 	</head>
 
 	<body>
-		{% include navigation.html %}
-		{{ content }}
+		<header>
+			<img src="/assets/images/1.jpeg">
+			{% include navigation.html %}
+		</header>
+
+		<div class="content">
+			{{ content }}
+		</div>
+
+		{% include footer.html %}
 	</body>
 <html>
