--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,8 +1,21 @@
----
-layout: default
----
+<!doctype html>
+<html>
+	<head>
+		<meta charset="utf-8">
+		<title>{{ page.title }}</title>
+		<link rel="stylesheet" href="/assets/css/styles.css">
+	</head>
 
-<h1>{{ page.title }}</h1>
-<p>{{ page.date | date_to_string }} - {{ page.author }}</p>
+	<body>
+		<header>
+			<img src="/assets/images/1.jpeg">
+			{% include postnav.html %}
+		</header>
 
-{{ content }}
+		<div class="content">
+			{{ content }}
+		</div>
+
+		{% include footer.html %}
+	</body>
+<html>
